# easy-GMI

./: .gitignore  CMakeLists.txt  MenuItem.c  Screen.c  easy_GMI.c  test.c  utils.c
includes/: MenuItem.h  Screen.h  easy_GMI.h  utils.h
